--- a/app/src/main/res/layout/fragment_feedback_location.xml
+++ b/app/src/main/res/layout/fragment_feedback_location.xml
@@ -4,7 +4,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:id="@+id/fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey" >
@@ -35,6 +35,16 @@
             tools:layout_conversion_absoluteWidth="157dp" />
 
     </RadioGroup>
+
+    <Button
+        android:id="@+id/btn_sendData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btn_sendLocation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group_rbtnLocation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
