--- a/app/src/main/res/layout/widget_app.xml
+++ b/app/src/main/res/layout/widget_app.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/widget_id_label" />
+            android:text="@string/txt_idWidget" />
 
         <TextView
             android:id="@+id/appwidget_id"
@@ -61,10 +61,11 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/imgBtn_update"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@color/white_light"
+            android:contentDescription="@string/description_imageButton"
             app:srcCompat="@drawable/ic_autorenew" />
 
     </LinearLayout>
@@ -86,14 +87,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:text="@string/widget_update_label" />
+            android:text="@string/txt_lastUpdate" />
 
         <TextView
             android:id="@+id/appwidget_update"
             style="@style/AppWidgetText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/date_count_format" />
+            android:text="@string/txt_formatDateCount" />
 
     </LinearLayout>
 
@@ -155,7 +156,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtWidget_brand"
+                android:id="@+id/txtWidget_search"
                 style="@style/AppWidgetText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -212,6 +213,8 @@
                 style="@style/AppWidgetText"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:textColor="@color/green" />
 
@@ -227,6 +230,8 @@
                 style="@style/AppWidgetText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:gravity="center"
                 android:textColor="@color/red" />
 
