--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_location"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationActivity">
+    tools:context=".view.activity.LocationActivity">
 
     <include
         android:id="@+id/toolBar"
