Implementação dos Sensores

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,16 +6,22 @@
         android:id="@+id/location"
         android:title="@string/location_now"
         app:showAsAction="always"
-        android:icon="@drawable/ic_location_on"
-        android:contentDescription="@string/description_location"/>
+        android:icon="@drawable/ic_location_on"/>
+
+    <item android:id="@+id/sensor_menu"
+        android:title="@string/sensor_menu"
+        android:icon="@drawable/ic_build"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/alter_theme"
+        android:title="@string/change_theme"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/clearDb"
         android:title="@string/clear_bd"
         app:showAsAction="never"/>
 
-    <item
-        android:id="@+id/alter_theme"
-        android:title="@string/change_theme" />
 
 </menu>
