--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,6 @@
 <resources>
-    <!-- Style for a widget "panel" - linear layout with white background. -->
+
+    <!-- Style do Widget (Margem, Pandding e Cor de Fundo -->
     <style name="AppWidgetSection" parent="@android:style/Widget">
         <item name="android:padding">8dp</item>
         <item name="android:layout_marginTop">12dp</item>
@@ -8,17 +9,14 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
-    <!-- Style for app widget labels and main text. -->
+    <!-- Style dos Widgets Label (Titulos) -->
     <style name="AppWidgetLabel" parent="AppWidgetText">
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- Style dos Widgets Text (Textos) -->
     <style name="AppWidgetText" parent="Base.TextAppearance.AppCompat.Subhead">
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <!-- Style for app widget button. -->
-    <style name="AppWidgetButton" parent="Base.Widget.AppCompat.Button">
-        <item name="android:layout_marginTop">12dp</item>
-    </style>
 </resources>
