--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -53,6 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_location"
         app:srcCompat="@drawable/ic_keyboard_arrow_down" />
 
+    <!-- Local do Fragment -->
     <FrameLayout
         android:id="@+id/fragment_location"
         android:layout_width="0dp"
