--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Layout de Busca -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintIndex"
         android:layout_width="match_parent"
@@ -78,6 +79,7 @@
         </LinearLayout>
 
 
+        <!-- Layout do Resultado (RecyclerView) -->
         <LinearLayout
             android:id="@+id/layoutResult"
             android:layout_width="match_parent"
