--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="25dp"
-                android:onClick="LoadResult"
+                android:onClick="BtnSearch"
                 android:text="@string/btn_search"
                 android:textColorHighlight="#FFFFFF" />
         </LinearLayout>
