--- a/app/src/main/res/layout/widget_app.xml
+++ b/app/src/main/res/layout/widget_app.xml
@@ -6,78 +6,98 @@
     android:padding="@dimen/widget_margin"
     android:theme="@style/ThemeOverlay.Maquiagem.AppWidgetContainer">
 
-    <!-- Numero do Widget -->
+
+    <!-- Numero da Atualização do Widget -->
     <LinearLayout
-        android:id="@+id/section_number"
+        android:id="@+id/section_title"
         style="@style/AppWidgetSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:background="@color/white_light"
-        android:gravity="center"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:padding="0dp">
 
         <TextView
-            android:id="@+id/appwidget_id_label"
+            android:id="@+id/appwidget_title"
             style="@style/AppWidgetLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_weight="1"
-            android:text="@string/txt_idWidget" />
-
-        <TextView
-            android:id="@+id/appwidget_id"
-            style="@style/AppWidgetText"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginEnd="7dp"
-            android:layout_marginRight="7dp"
-            android:layout_weight="1" />
+            android:text="@string/app_name"
+            android:textSize="18sp" />
 
         <ImageButton
-            android:id="@+id/imgBtn_update"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/btn_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_weight="1"
             android:background="@color/white_light"
             android:contentDescription="@string/description_imageButton"
             app:srcCompat="@drawable/ic_autorenew" />
 
     </LinearLayout>
 
-    <!-- Numero da Atualização do Widget -->
     <LinearLayout
         android:id="@+id/section_update"
         style="@style/AppWidgetSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/section_number"
+        android:layout_below="@id/section_title"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:background="@color/white_light"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="0dp">
 
         <TextView
-            android:id="@+id/appwidget_update_label"
-            style="@style/AppWidgetLabel"
-            android:layout_width="match_parent"
+            android:id="@+id/appwidget_id_label"
+            style="@style/AppWidgetText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:text="@string/txt_idWidget" />
+
+        <TextView
+            android:id="@+id/appwidget_updateTime_label"
+            style="@style/AppWidgetText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:text="@string/txt_updateTime" />
+
+        <TextView
+            android:id="@+id/appwidget_updateNumber_label"
+            style="@style/AppWidgetText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/txt_lastUpdate" />
 
-        <TextView
-            android:id="@+id/appwidget_update"
-            style="@style/AppWidgetText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/txt_formatDateCount" />
-
     </LinearLayout>
-
 
     <!-- N° de Buscas e Localizações (Total,Certas e Erradas) -->
     <LinearLayout
