--- a/Makeup/src/main/res/layout/activity_main.xml
+++ b/Makeup/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
+        app:headerLayout="@layout/layout_navigation_header"
         app:itemTextAppearance="@style/NavigationItemAppearance"
         app:menu="@menu/navigation_menu" />
 
