--- a/Makeup/src/main/res/layout/activity_result.xml
+++ b/Makeup/src/main/res/layout/activity_result.xml
@@ -39,6 +39,9 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
         android:visibility="visible"
         tools:listitem="@layout/layout_recycler_view">
 
