--- a/Makeup/src/main/res/layout/activity_result.xml
+++ b/Makeup/src/main/res/layout/activity_result.xml
@@ -7,9 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="visible"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/toolBar"
     tools:context=".view.activities.ResultActivity">
 
     <Button
@@ -20,29 +17,29 @@
         android:layout_gravity="center|start"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:text="@string/return_search"
         app:icon="@drawable/ic_return_home" />
 
     <TextView
-        android:id="@+id/txt_result"
-        android:layout_width="wrap_content"
+        android:id="@+id/title_loadingMakeup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/ubuntu_bold"
         android:gravity="center"
-        android:text="@string/title_result"
-        android:textSize="25sp"
-        android:visibility="visible" />
+        android:text="@string/loading_text"
+        android:textSize="20sp"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="15dp"
-        android:visibility="visible"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="5dp"
         tools:listitem="@layout/layout_recycler_view">
 
     </androidx.recyclerview.widget.RecyclerView>
